[package]
name = "rustpad-server"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytecount = "0.6.7"
dashmap = "5.5.3"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.20"
operational-transform = { version = "0.6.1", features = ["serde"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.36.0", features = ["full", "test-util"] }
tokio-stream = "0.1.14"
warp = "0.3.6"

[dev-dependencies]
tempfile = "3.10.0"
